--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 connectionString = "mongodb+srv://user_root:user_root@cluster0.hlxa4.mongodb.net/test001?retryWrites=true&w=majority"
 jwt="abc"
+
+# NODE_ENV="PROD"
+NODE_ENV="TEST"
