--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --timeout 10000",
     "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
+    "mocha": "^2.4.5",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
@@ -28,6 +31,7 @@
     "faker": "^5.5.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.1.4",
+    "morgan": "^1.10.0",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0"
   }
